# Connect4AI-y2s2

./: README.md  pyproject.toml
src/connect4ai_y2s2/: __init__.py  agentPicker.py  board.py  gameloop.py
src/connect4ai_y2s2/agents/: generic.py  random.py  rules.py
