[project]
name = "connect4ai-y2s2"
version = "0.1.0"
description = "Connect4 AI project"
readme = "README.md"
authors = [
    { name = "TerminalMan", email = "84923604+SecretiveShell@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.3",
]

[project.scripts]
connect4ai-y2s2 = "connect4ai_y2s2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
